[package]
name = "itm_logger"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.5.8", optional = true }
log = { version = "0.4.6", default-features = false, optional = true }

[features]
default = [ "logging" ] #Set up this way so it's possible to disable logging and have the log macros expand to noop
logging = [ "log", "cortex-m" ]